[gd_scene load_steps=9 format=3 uid="uid://corj82sw86upa"]

[ext_resource type="Script" uid="uid://b3atjaf7o32s5" path="res://scripts/platforming_section_template.gd" id="1_pl74v"]
[ext_resource type="Environment" uid="uid://0raosp1j8p3b" path="res://themes/world_environment.tres" id="1_yuty3"]
[ext_resource type="PackedScene" uid="uid://c8t036440xf3" path="res://scenes/player_3d.tscn" id="2_pl74v"]
[ext_resource type="Material" uid="uid://woy3v4cv6ld" path="res://themes/static_test_platform.tres" id="3_jclj1"]
[ext_resource type="PackedScene" uid="uid://vtkc3myfd1i6" path="res://scenes/checkpoint_respawn_3d.tscn" id="4_h3t1q"]
[ext_resource type="PackedScene" uid="uid://j4c625fopnpl" path="res://scenes/timer_trigger_3d.tscn" id="6_vg5gd"]
[ext_resource type="PackedScene" uid="uid://d2rnwb6em08gc" path="res://scenes/death_plane_3d.tscn" id="7_vg5gd"]
[ext_resource type="PackedScene" uid="uid://cfcdfh2hxyn7a" path="res://scenes/growing_platform_3d.tscn" id="8_a50qs"]

[node name="Platforming_Section_Template" type="Node3D"]
script = ExtResource("1_pl74v")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_yuty3")

[node name="Player3D" parent="." instance=ExtResource("2_pl74v")]

[node name="CheckpointRespawn3D" parent="." instance=ExtResource("4_h3t1q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
size = Vector3(9, 10, 7)

[node name="Checkpoint_Platform" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8.5, 0)
use_collision = true
size = Vector3(9, 17, 7)
material = ExtResource("3_jclj1")

[node name="TimerTrigger3D" parent="." instance=ExtResource("6_vg5gd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 17)
size = Vector3(9, 10, 7)

[node name="Starting_Trigger_Platform" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8.5, 17)
use_collision = true
size = Vector3(9, 17, 7)
material = ExtResource("3_jclj1")

[node name="DeathPlane3D" parent="." instance=ExtResource("7_vg5gd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -27, 45)
size = Vector3(100, 1, 100)

[node name="GrowingPlatform3D" parent="." instance=ExtResource("8_a50qs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 29)
move_time = 2.0
movement_delay = 0.1
final_relative_pos = Vector3(0, 10, 3.665)

[connection signal="player_entered" from="CheckpointRespawn3D" to="." method="_on_checkpoint_respawn_3d_player_entered"]
[connection signal="player_entered" from="TimerTrigger3D" to="." method="_on_timer_trigger_3d_player_entered"]
